# zdoc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
cli/: Cargo.toml  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: validation.rs
src/: access.rs  builder.rs  classify.rs  compare.rs  debug.rs  document.rs  error.rs  facet.rs  json.rs  kdl.rs  lib.rs  rkyv.rs  serde.rs  serde_support.rs  xml.rs  yaml.rs
src/builder/: arg.rs  entry.rs  node.rs  raw.rs  value.rs
src/document/: codec.rs  node.rs  raw.rs
src/facet/: de.rs  ser.rs
src/serde/: de.rs  error.rs  ser.rs
src/serde_support/: de.rs  ser.rs
tests/: builder.rs  de_no_alloc.rs  validation.rs
