[workspace]
members = ["cli"]

[package]
name = "zdoc"
version = "0.1.0"
edition = "2024"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
description = "Zero-copy JSON/XML-like compact document"

[dependencies]
bincode = { version = "2.0.1", optional = true }
bytemuck = { version = "1.22.0", features = ["derive"] }
hashbrown = { version = "0.15.2", optional = true }
kdl = { version = "6.3.4", optional = true }
quick-xml = { version = "0.37.4", optional = true, default-features = false }
rkyv = { version = "0.8.10", optional = true }
serde = { version = "1.0.219", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = "2.0.12"
facet-reflect = { version = "0.11.0", optional = true, default-features = false, features = [
    "alloc",
] }
facet-core = { version = "0.12.0", optional = true, default-features = false }

[dev-dependencies]
facet-derive = "0.9.7"
facet = { version = "0.9.7", features = ["reflect"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["alloc", "builder"]
alloc = []
builder = ["alloc", "dep:hashbrown"]
serde = ["dep:serde"]
json = ["dep:serde_json", "alloc"]
kdl = ["dep:kdl", "alloc"]
yaml = ["dep:serde_yaml", "alloc"]
xml = ["dep:quick-xml", "alloc"]
bincode = ["dep:bincode"]
hashbrown = ["dep:hashbrown"]
rkyv = ["dep:rkyv"]
facet = ["alloc", "dep:facet-core", "dep:facet-reflect"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = { level = "allow" }
cast_lossless = { level = "allow" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
