[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zdoc"
path = "main.rs"

[dependencies]
zdoc.path = ".."
clap = { version = "4.5.37", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
clap-cargo = "0.15.2"

[features]
default = ["json", "kdl", "yaml", "xml", "bincode"]
json = ["zdoc/json"]
kdl = ["zdoc/kdl"]
yaml = ["zdoc/yaml"]
xml = ["zdoc/xml"]
toml = []                                           # TODO
bincode = ["zdoc/bincode"]
