[package]
name = "zdocument-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.zdocument]
path = ".."

[[bin]]
name = "validation"
path = "fuzz_targets/validation.rs"
test = false
doc = false
bench = false
